Refactor ASTAStrategy backfill, move getDailyPrice to DailyPriceRepository, and clean up linter warnings (#145)
* Refactor ASTAStrategy backfill, move getDailyPrice to DailyPriceRepository, and clean up linter warnings

* docs: document learnings on repository default methods, sequenced collections, and range-fetching in AGENTS.md